<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="iphone13ProMax7VM" type="com.application.app.modules.iphone13promax7.data.viewmodel.Iphone13ProMax7VM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintIPhone13ProM"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_100">
        <ImageView android:id="@+id/imageGroup2888"
            android:layout_gravity="top|start"
            android:layout_height="@dimen/_283pxh"
            android:layout_marginEnd="@dimen/_71pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_57pxv"
            android:layout_width="@dimen/_259pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group2888_1"
            app:layout_constraintEnd_toEndOf="@+id/imageUndrawadventur"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" tools:ignore="ContentDescription"/>
        <ImageView android:id="@+id/imageGroup2887"
            android:layout_gravity="bottom|start"
            android:layout_height="@dimen/_64pxh"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_43pxh"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_width="@dimen/_324pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group2887_1"
            app:layout_constraintEnd_toEndOf="@+id/imageUndrawadventur"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageGroup2888" tools:ignore="ContentDescription"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintKjfkdjf"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_59pxh"
            android:layout_marginStart="@dimen/_58pxh"
            android:layout_marginTop="@dimen/_46pxv"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageGroup2887" style="@style/groupStyle">
            <TextView android:gravity="top|center"
                android:id="@+id/txtDesignYourDre"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4pxv"
                android:layout_width="0dp"
                android:text="@{iphone13ProMax7VM.iphone13ProMax7Model.txtDesignYourDre}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/txtAbhayaLibreMediumabhayalibremedium26" tools:text="@string/msg_design_your_dre"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:gravity="top|center"
            android:id="@+id/txtDiscoverPlaces"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_59pxh"
            android:layout_marginStart="@dimen/_59pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="0dp"
            android:text="@{iphone13ProMax7VM.iphone13ProMax7Model.txtDiscoverPlaces}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintKjfkdjf"
            style="@style/txtAdaminaregular14" tools:text="@string/msg_discover_places"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGroup68"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_100pxv"
            android:layout_marginEnd="@dimen/_92pxh"
            android:layout_marginStart="@dimen/_92pxh"
            android:layout_marginTop="@dimen/_67pxv"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageGroup2921" style="@style/groupStyle">
            <ImageView android:id="@+id/imageGroup2882"
                android:layout_gravity="start"
                android:layout_height="0dp" android:layout_width="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_group2882_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" tools:ignore="ContentDescription"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintGroup2889"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_36pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageGroup2882"
                app:layout_constraintEnd_toEndOf="@+id/imageGroup2882"
                app:layout_constraintStart_toStartOf="@+id/imageGroup2882" app:layout_constraintTop_toTopOf="@+id/imageGroup2882">
                <TextView android:ellipsize="end"
                    android:gravity="center"
                    android:id="@+id/txtGetStarted"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{iphone13ProMax7VM.iphone13ProMax7Model.txtGetStarted}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageArrow1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/txtRadioCanadaromanbold22" tools:text="@string/lbl_get_started"/>
                <ImageView android:id="@+id/imageArrow1"
                    android:layout_gravity="bottom"
                    android:layout_height="@dimen/_1pxh"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginStart="@dimen/_34pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="@dimen/_14pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrow1_1"
                    app:layout_constraintBottom_toBottomOf="@+id/txtGetStarted"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtGetStarted"
                    app:layout_constraintTop_toTopOf="@+id/txtGetStarted" tools:ignore="ContentDescription"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView android:id="@+id/imageGroup2921"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxh"
            android:layout_marginEnd="@dimen/_196pxh"
            android:layout_marginStart="@dimen/_196pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="@dimen/_34pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group2921_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDiscoverPlaces" tools:ignore="ContentDescription"/>
        <ImageView android:id="@+id/imageUndrawadventur"
            android:layout_gravity="end"
            android:layout_height="@dimen/_284pxh"
            android:layout_marginBottom="@dimen/_52pxv"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_57pxv"
            android:layout_width="@dimen/_303pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_undrawadventur_1"
            app:layout_constraintBottom_toBottomOf="@+id/imageGroup2887"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toStartOf="@+id/imageGroup2888"
            app:layout_constraintTop_toTopOf="@+id/imageGroup2888" tools:ignore="ContentDescription"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
