<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="soundCloudVM" type="com.application.app.modules.soundcloud.data.viewmodel.SoundCloudVM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintGroup170"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_100">
        <ImageView android:id="@+id/imageImage51"
            android:layout_gravity="start" android:layout_height="0dp"
            android:layout_width="0dp" android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            imageRes="@{@drawable/img_image51}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image51"/>
        <ImageView android:id="@+id/imageVector12"
            android:layout_gravity="start"
            android:layout_height="@dimen/_152pxh"
            android:layout_marginBottom="@dimen/_26pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="@dimen/_138pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_vector12"
            app:layout_constraintBottom_toBottomOf="@+id/imageUnsplashJ9O3Wc2"
            app:layout_constraintEnd_toEndOf="@+id/viewEllipse348"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="@+id/constraintEllipse349"
            app:layout_constraintTop_toTopOf="@+id/txt88" tools:ignore="ContentDescription"/>
        <View
            android:background="@drawable/rectangle_bg_white_a700_border_deep_orange_600_radius_22_5"
            android:id="@+id/viewEllipse348"
            android:layout_gravity="top|end"
            android:layout_height="@dimen/_45pxh"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_width="@dimen/_45pxh"
            app:layout_constraintEnd_toEndOf="@+id/txt88"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="@+id/txt88" app:layout_constraintTop_toBottomOf="@+id/imageUnsplashJ9O3Wc"/>
        <TextView android:ellipsize="end" android:gravity="top|center"
            android:id="@+id/txt88" android:layout_gravity="top|end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15pxv"
            android:layout_marginEnd="@dimen/_79pxh"
            android:layout_marginStart="@dimen/_89pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{soundCloudVM.soundCloudModel.txt88}"
            app:layout_constraintBottom_toBottomOf="@+id/viewEllipse348"
            app:layout_constraintEnd_toEndOf="@+id/imageImage51"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toStartOf="@+id/imageVector12"
            app:layout_constraintTop_toBottomOf="@+id/imageUnsplashJ9O3Wc"
            style="@style/txtAcmeregular19" tools:text="@string/lbl_882"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintEllipse349"
            android:layout_gravity="bottom|start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_107pxh"
            android:layout_marginStart="@dimen/_139pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/imageUnsplashJ9O3Wc2"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="@+id/imageImage51"
            app:layout_constraintTop_toTopOf="@+id/imageUnsplashJ9O3Wc2" style="@style/groupStyledeep_orange_600cornerRadius">
            <View
                android:background="@drawable/rectangle_bg_deep_purple_400_radius_17_5"
                android:id="@+id/viewEllipse351"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_35pxh"
                android:layout_marginBottom="@dimen/_4pxv"
                android:layout_marginEnd="@dimen/_5pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="@dimen/_35pxh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView android:id="@+id/imageUnsplashJ9O3Wc"
            android:layout_gravity="end"
            android:layout_height="@dimen/_71pxh"
            android:layout_marginEnd="@dimen/_70pxh"
            android:layout_marginStart="@dimen/_242pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="@dimen/_115pxh"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="@+id/imageImage51"
            app:layout_constraintHorizontal_bias="0.57"
            app:layout_constraintStart_toStartOf="@+id/imageImage51"
            app:layout_constraintTop_toBottomOf="@+id/viewEllipse352"
            imageRes="@{@drawable/img_unsplashj9o3wc}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_unsplashj9o3wc"/>
        <View
            android:background="@drawable/rectangle_bg_white_a700_border_deep_orange_600_radius_22_5"
            android:id="@+id/viewEllipse352"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_45pxh"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_width="@dimen/_45pxh"
            app:layout_constraintEnd_toEndOf="@+id/txt70"
            app:layout_constraintStart_toStartOf="@+id/txt70" app:layout_constraintTop_toBottomOf="@+id/imageUnsplashJ9O3Wc1"/>
        <TextView android:ellipsize="end" android:gravity="top|center"
            android:id="@+id/txt70"
            android:layout_gravity="bottom|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15pxv"
            android:layout_marginEnd="@dimen/_289pxh"
            android:layout_marginStart="@dimen/_41pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{soundCloudVM.soundCloudModel.txt70}"
            app:layout_constraintBottom_toBottomOf="@+id/viewEllipse352"
            app:layout_constraintEnd_toEndOf="@+id/imageImage51"
            app:layout_constraintStart_toStartOf="@+id/imageImage51"
            app:layout_constraintTop_toBottomOf="@+id/imageUnsplashJ9O3Wc1"
            style="@style/txtAcmeregular19" tools:text="@string/lbl_702"/>
        <View
            android:background="@drawable/rectangle_bg_white_a700_border_deep_orange_600_radius_22_5"
            android:id="@+id/viewEllipse353"
            android:layout_gravity="bottom|end"
            android:layout_height="@dimen/_45pxh"
            android:layout_marginBottom="@dimen/_159pxv"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="@dimen/_45pxh"
            app:layout_constraintBottom_toBottomOf="@+id/imageImage51"
            app:layout_constraintEnd_toEndOf="@+id/txt81"
            app:layout_constraintHorizontal_bias="0.76"
            app:layout_constraintStart_toStartOf="@+id/txt81" app:layout_constraintTop_toBottomOf="@+id/imageUnsplashJ9O3Wc2"/>
        <TextView android:ellipsize="end" android:gravity="top|center"
            android:id="@+id/txt81" android:layout_gravity="bottom|end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_300pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{soundCloudVM.soundCloudModel.txt81}"
            app:layout_constraintBottom_toBottomOf="@+id/viewEllipse353"
            app:layout_constraintEnd_toEndOf="@+id/imageImage51"
            app:layout_constraintStart_toStartOf="@+id/imageImage51"
            app:layout_constraintTop_toBottomOf="@+id/constraintEllipse349"
            style="@style/txtAcmeregular19" tools:text="@string/lbl_81"/>
        <ImageView android:id="@+id/imageUnsplashJ9O3Wc1"
            android:layout_gravity="start"
            android:layout_height="@dimen/_71pxh"
            android:layout_marginEnd="@dimen/_280pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_300pxv"
            android:layout_width="@dimen/_115pxh"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/viewEllipse352"
            app:layout_constraintEnd_toEndOf="@+id/imageImage51"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="@+id/imageImage51"
            imageRes="@{@drawable/img_unsplashj9o3wc_3}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_unsplashj9o3wc_3"/>
        <ImageView android:id="@+id/imageUnsplashJ9O3Wc2"
            android:layout_gravity="bottom|end"
            android:layout_height="@dimen/_71pxh"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_87pxv"
            android:layout_width="@dimen/_115pxh"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="@+id/imageImage51"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toEndOf="@+id/constraintEllipse349"
            app:layout_constraintTop_toBottomOf="@+id/viewEllipse348"
            imageRes="@{@drawable/img_unsplashj9o3wc_4}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_unsplashj9o3wc_4"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
